--- a/desktopApp/content/css/general.css
+++ b/desktopApp/content/css/general.css
@@ -98,7 +98,7 @@ body {
 }
 
 .heading-tertiary {
-  font-size: 3.6rem;
+  font-size: 3rem;
   line-height: 1.2;
   margin-bottom: 3.2rem;
 }
@@ -125,7 +125,7 @@ body {
   font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
-  transition: background-color 1s;
+  transition: all 0.3s;
 }
 
 .btn--full:link,
@@ -151,6 +151,22 @@ body {
   /* border: 3px solid #fff; */
 
   box-shadow: 0 0 0 3px #fff;
+}
+
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
 }
 
 .container {
