--- a/desktopApp/content/css/general.css
+++ b/desktopApp/content/css/general.css
@@ -117,6 +117,8 @@ body {
   margin-right: 1.6rem !important;
 }
 
+/* btn:link/ visited all these work if we have href nd nor for simple button */
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -126,12 +128,29 @@ body {
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
   transition: all 0.3s;
+
+  /* Only necessary for .btn */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 }
 
 .btn--full:link,
 .btn--full:visited {
   background-color: #e67e22;
   color: #fff;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 .btn--full:hover,
@@ -150,7 +169,7 @@ body {
   background-color: #fdf2e9;
   /* border: 3px solid #fff; */
 
-  box-shadow: 0 0 0 3px #fff;
+  box-shadow: inset 0 0 0 3px #fff;
 }
 
 .link:link,
@@ -220,4 +239,9 @@ body {
   width: 3rem;
   height: 3rem;
   color: #e67e22;
+}
+
+.cta *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 100);
 }
