--- a/desktopApp/content/css/style.css
+++ b/desktopApp/content/css/style.css
@@ -9,6 +9,7 @@
   height: 9.6rem;
 
   padding: 0 4.8rem;
+  position: relative;
 }
 
 .logo {
@@ -21,7 +22,7 @@
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 
 .main-nav-link:link,
@@ -52,6 +53,26 @@
   background-color: #cf711f;
 }
 
+/*----------------- MOBILE ----------------*/
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  /* we want to hide the icons */
+  display: none;
+}
+
+/* styling the icons */
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+/* selecting icon using the icone name. */
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
 /*----------- Hero Section -------------- */
 
 .hero {
@@ -485,7 +506,6 @@ aside {
   border-radius: 11px;
   background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
   overflow: hidden;
-  height: 50rem;
 }
 
 .cta-text-box {
