--- a/desktopApp/content/css/style.css
+++ b/desktopApp/content/css/style.css
@@ -73,6 +73,25 @@
 .icon-mobile-nav[name="close-outline"] {
   display: none;
 }
+
+/* ---------------------- STICKY NAVIGATION --------------------- */
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.97);
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
+}
+
 /*----------- Hero Section -------------- */
 
 .hero {
@@ -384,26 +403,26 @@ strong {
   padding: 9.6rem 0;
 }
 
-.princing-plan {
+.pricing-plan {
   border-radius: 11px;
   width: 75%;
 }
 
-.princing-plan--starter {
+.pricing-plan--starter {
   /* justify 1st block to end */
   justify-self: end;
   border: 2px solid #fdf2e9;
   padding: 4.6rem;
 }
 
-.princing-plan--complete {
+.pricing-plan--complete {
   background-color: #fdf2e9;
   padding: 4.8rem;
   position: relative;
   overflow: hidden;
 }
 
-.princing-plan--complete::after {
+.pricing-plan--complete::after {
   content: "Best value";
   position: absolute;
   top: 6%;
